[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["HaritsAcheiz <harits.muhammad.only@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.30.0"
selectolax = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
